--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "strictNullChecks": true
   },
+  "extends": "./tsconfig.paths.json",
   "include": [
     "src"
   ]
